# simulator

./: .gitignore  .repomixignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  ARCHITECTURE_STATUS.md  BATTLE_SYSTEM_DESIGN.md  BUG_FIX_RACE_CONDITION.md  CLAUDE.md  CLIENT_MATCHSERVER_FLOW.md  Cargo.toml  GAME_DESIGN.md  GIT_COMMIT_CONVENTION.md  KNOWN_ISSUES_AND_SOLUTIONS.md  MATCH_SERVER_ANALYSIS.md  POTENTIAL_BUGS_IN_MATCH_SERVER.md  POTENTIAL_ISSUES.md  README.md  REFACTORING_DESIGN.md  REFACTORING_PLAN_PART3.md  build.rs  commit.txt  commit_message.txt  docker-compose.yml  jwt.md  main.py  observer_actor_design_issue.md  repomix-output.xml  rustc-ice-2025-06-10T15_05_37-22336.txt  simulator.toml  test_client.md  test_client_observer_verification_design.md
core/: Cargo.toml
core/config/: game_balance.toml
core/docs/: battle_flow.md  mana.md  movement_flow.md  ranged_attack_flow.md  skill_flow.md  testing_strategy.md
core/logs/: log.2025-12-08
core/src/: config.rs  lib.rs
core/src/ecs/components/: abnormality.rs  mod.rs
core/src/ecs/entities/: mod.rs
core/src/ecs/resources/: inventory.rs  (+2 more)
core/src/game/: ability.rs  behavior.rs  components.rs  determinism.rs  enums.rs  growth.rs  mod.rs  ordeal_scheduler.rs  resources.rs  stats.rs  world.rs
core/tests/: autocast_pairing_hardening.rs  battle_core.rs  dawn_phase1_selection.rs  effective_stats.rs  equipment_constraints.rs  event_pool_validation.rs  qliphoth_event_schedule.rs  random_event_random_shop.rs  realistic_battle.rs  replay_attack_onhit_heal.rs  replay_decision_hardening.rs  replay_schedule_attack_hardening.rs  timeline_hardening.rs
core/tests/common/: mod.rs
core/tests_bak/: autocast_pairing_hardening.rs  dawn_phase1_selection.rs  effective_stats.rs  growth_stack_persistence.rs  qliphoth_event_schedule.rs  random_event_random_shop.rs  realistic_battle.rs  replay_attack_onhit_heal.rs  replay_decision_hardening.rs  replay_schedule_attack_hardening.rs  timeline_hardening.rs
core/tests_bak/common/: mod.rs
env/: Cargo.toml  README.md
env/src/: lib.rs
match_server/: Cargo.toml  SAFETY_IMPROVEMENTS.md  match-server-repomix-output.xml
match_server/config/: development.toml  loadtest.toml  production.toml
match_server/logs/: app.log.2025-08-17  app.log.2025-08-19
match_server/scripts/: ATOMIC_CANCEL_SESSION_SCRIPT.lua  ATOMIC_LOADING_COMPLETE_SCRIPT.lua  ATOMIC_MATCH_SCRIPT.lua  CLEANUP_STALE_SESSION_SCRIPT.lua  DEQUEUE_PLAYER.lua
match_server/src/: admin.rs  debug.rs  env.rs  event_stream.rs  invariants.rs  lib.rs  main.rs  metrics.rs  protocol.rs  provider.rs  pubsub.rs  redis_events.rs  state_events.rs  ws_session.rs
match_server/src/blacklist/: mod.rs
match_server/src/matchmaker/: actor.rs  circuit_breaker.rs  common.rs  handlers.rs  lock.rs  messages.rs  mod.rs
match_server/src/provider/: mod.rs
match_server/src/redis/: handlers.rs  messages.rs  mod.rs
match_server/src/session/: handlers.rs  helper.rs  mod.rs  ws_session.rs
match_server/src/subscript/: handlers.rs  messages.rs  mod.rs
simulator_auth_server/: Cargo.toml  repomix-output.xml
simulator_auth_server/logs/: app.log.2025-07-04  app.log.2025-07-06
simulator_auth_server/migrations/: 001_create_extensions_and_functions.sql  003_create_players_table.sql  007_create_match_history_table.sql  init.sql
simulator_auth_server/src/: lib.rs  main.rs
simulator_auth_server/src/auth_server/: db_operation.rs  end_point.rs  errors.rs  mod.rs  model.rs  types.rs
simulator_auth_server/tests/: test.rs
simulator_dedicated_server/: Cargo.toml  repomix-output.xml
simulator_dedicated_server/logs/: app.log.2025-05-20  app.log.2025-06-10  app.log.2025-06-22  app.log.2025-07-06
simulator_dedicated_server/src/: enums.rs  lib.rs  main.rs  types.rs
simulator_dedicated_server/src/connection/: connection.rs  messages.rs  mod.rs
simulator_dedicated_server/src/room/: mod.rs
simulator_dedicated_server/src/server/: mod.rs
simulator_dedicated_server/src/test/: mod.rs
simulator_dedicated_server/tests/: test.rs
simulator_match_server/: Cargo.toml  enhanced.md  repomix-output.xml  review.md
simulator_match_server/config/: development.toml  production.toml
simulator_match_server/logs/: app.log.2025-07-06  app.log.2025-07-15  app.log.2025-07-16  app.log.2025-07-17  app.log.2025-07-25
simulator_match_server/scripts/: ATOMIC_LOADING_COMPLETE_SCRIPT.lua
simulator_match_server/src/: auth.rs  debug.rs  env.rs  events.rs  lib.rs  main.rs  protocol.rs  provider.rs  pubsub.rs  state_events.rs  util.rs  ws_session.rs
simulator_match_server/src/matchmaker/: actor.rs  handlers.rs  http.rs  lock.rs  message.rs  messages.rs  mod.rs  scripts.rs
test_client/: Cargo.toml  README_SWARM.md  commit.txt  repomix-output.xml  test_client-repomix-output.xml
test_client/configs/: swarm_high.toml  swarm_load_test.toml  swarm_max.toml  swarm_medium.toml  swarm_minimal.toml  swarm_template.toml  swarm_ultra.toml
test_client/logs/: app.log.2025-07-23  app.log.2025-07-25  app.log.2025-08-17  app.log.2025-08-19  app.log.2025-10-06  app.log.2025-10-08  app.log.2025-10-14  app.log.2025-10-22  swarm_summary_20250817_163638_ecf90ad1-03bb-424f-9555-51e380ba988b.json  swarm_summary_20250819_001726.json  swarm_summary_20250819_011648.json
test_client/src/: behavior.rs  copy.rs  lib.rs  main.rs  observer.rs  protocols.rs  scenario.rs  schedules.rs  test_utils.rs
test_client/src/behaviors/: disconnect.rs  failure.rs  ignore.rs  invalid.rs  mod.rs  normal.rs  quit.rs  slow.rs  spiky_loader.rs  timeout_loader.rs
test_client/src/observer_actor/: handler.rs  message.rs  mod.rs
test_client/src/player_actor/: handler.rs  message.rs  mod.rs
test_client/src/scenario_actor/: handler.rs  message.rs  mod.rs
test_client/src/swarm/: behavior_mix.rs  concrete.rs  config.rs  generate.rs  manifest.rs  mod.rs  schedule.rs  seed.rs  slo.rs  swarm.rs  template.rs
test_client/tests/: behavior_scenarios.rs  invalid_behaviors.rs  invalid_dequeue_behaviors.rs  invalid_enqueue_behaviors.rs  normal_vs_normal.rs  normal_vs_quit.rs  swarm_test.rs  test.rs
(+438 files in other folders)
