[package]
name = "card_game"
version = "0.1.0"
edition = "2021"
description = "card backend"
author = "jyto7034"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
base64 = "0.13.1"
byteorder = "1.5.0"
rayon = "1.8.0"
clap = {version="4.5.26", features = ["derive"]}
actix-web = "4.9.0"
actix = "=0.13.5"
actix-ws = "0.3.0"
futures-util = "0.3"
argon2 = "0.5.3"
dotenv = "0.15.0"
tokio = { version = "1.39.3", features = ["full"] }
lazy_static = "1.5.0"
structopt = "=0.3.26"
rand = "0.8.5"
hex = "0.4.3"
parking_lot = "0.12.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
paste = "1.0.15"