[workspace.package]
version = "0.1.0"
edition = "2021"
description = "card backend"

[workspace]
members = [ 
    "simulator_auth_server",
    "simulator_core",
    "simulator_dedicated_server",
    "simulator_match_server",
    "simulator_client/src-tauri", "test_client",
    "simulator_metrics",
    "simulator_env",
]

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
