[workspace.package]
version = "0.1.0"
edition = "2021"
description = "card backend"

[workspace]
members = [ 
    "auth_server",
    "core",
    "client/src-tauri", 
    "test_client",
    "metrics",
    "game_server",
    "env"
]

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
