[package]
name = "game_core"
version = "0.1.0"
edition = "2021"
description = "card backend"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
globwalk = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

[dependencies]
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
base64 = "0.13.1"
byteorder = "1.5.0"
rayon = "1.8.0"
clap = {version="4.5.26", features = ["derive"]}
ctor = "0.4.1"

actix-web = "4.9.0"
actix = "=0.13.5"
actix-ws = "0.3.0"
async-tungstenite = {version="0.28.2", features = ["tokio-runtime"]}
reqwest = "0.12.12"

futures-util = {version = "0.3", features = ["sink"]}
futures = "0.3.31"
argon2 = "0.5.3"
dotenv = "0.15.0"

gnuplot = "0.0.45"
criterion = "0.5.1"
url = "2.5.4"

tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-console = "0.1.13"
console-subscriber = "0.4.1"

uuid = { version = "1.14.0", features = ["v4", "serde"] }
lazy_static = "1.5.0"
structopt = "=0.3.26"
rand = "0.8.5"
hex = "0.4.3"
parking_lot = "0.12.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
paste = "1.0.15"
cargo-llvm-cov = "0.6.16"

serial_test = "3.2.0"
