[package]
name = "env"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.13", features = ["toml"] }
dotenv = "0.15.0"
anyhow = "1.0"
tracing = "0.1.41"
dirs = "5.0"
once_cell = "1.19"
toml = "0.8"