[package]
name = "simulator_auth_server"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "tls-rustls-ring-native-roots", "uuid", "chrono", "json" ] }
# sqlx-cli = {version = "0.8.6", features = ["native-tls", "postgres"] } 
actix-web = "4.9.0"
ctor = "0.4.1"
actix-http = "3.11.0"
actix = "=0.13.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
steamworks = "0.12.0"
futures-util = {version = "0.3", features = ["sink"]}
futures = "0.3.31"
once_cell = "1.21.3"
crossbeam-utils = "0.8.21"

[env]
url = "postgres://postgres:root@localhost:5432/auth"
