[package]
name = "test_client"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
url = "2"
awc = "3.7.0"
actix-web = "4.9.0"
actix = "=0.13.5"
actix-ws = "0.2.5"
actix-web-actors = "4.3.0"
ctor = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.80"
anyhow = "1.0.86"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
backoff = "0.4"

# Environment configuration
simulator_env = { path = "../simulator_env" }
